--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
        align-items: center;
        justify-content: center;
        height: 100vh;
-       background: #000;
+       background: rgb(35, 9, 99);
        padding: 0;
        margin: 0;
        box-sizing: border-box;
